# point-cloud-attention

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
training/: experiment.py  experiment_elegy.py  experiment_tf.py  params.yml  set_transformer.py
training/transformer/: __init__.py  attention.py
